# visitors

./: .gitignore  pyproject.toml
candidates/: list.yaml
scripts/: calendar.html  calendar_2025_3.html  calendars_trials.py  main.py
src/visitors/: __init__.py
tests/: test_me.py
