[project]
authors = [{name = "Paul Sapin", email = "p.sapin@imperial.ac.uk"}]
dependencies = []
name = "visitors"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
visitors = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
pixi-pycharm = ">=0.0.10,<0.0.11"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]
